--- a/index.html
+++ b/index.html
@@ -1,51 +1,404 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  
 
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-    <style> body {padding: 0; margin: 0; background-color: black; color: white;
-     font-family: "Courier New";} 
-
-            #holder {text-align:center;}
-            #canvas {margin:auto; height: 410px; width: 410px; 
-              background-color: black; 
-              box-shadow: 0px 10px black;
-            display:inline-block;
-            vertical-align: top;}
-            #links {margin:auto; height: 410px; width: 310px; 
-              background-color: #3500D3; 
-              box-shadow: 0px 10px #0C0032;
-            display:inline-block;
-            vertical-align: top;}
-
-            a:link { color: white; }
-            a:visited { color: white;}
-                
-    </style>
+  <title>Franco's Stuff!</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="p5.js"></script>
-    <script src="addons/p5.dom.min.js"></script>
+    <script src="addons/p5.dom.js"></script>
     <script src="addons/p5.sound.js"></script>
-    <script src="addons/nn.js"></script>
-    <script src="addons/matrix.js"></script>
-    <script src="addons/matter.js"></script>
-    <script src="sketch.js"></script>
+    <script src="Conway.js"></script>
+    <script src="Witness.js"></script>
     
-  </head>
-  <body>
+  <style>
+  body {
+    font: 400 15px Lato, sans-serif;
+    line-height: 1.8;
+    color: #818181;
+    background-color: black;
+  }
+  h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #5C6F68;
+    font-weight: 600;
+    margin-bottom: 30px;
+  }
+  h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    color: #5C6F68;
+    font-weight: 400;
+    margin-bottom: 30px;
+  }  
+  .jumbotron {
+    background-color: #95D9C3;
+    color: #5C6F68;
+    padding: 50px 25px;
+    font-family: Montserrat, sans-serif;
+  }
+  .container-fluid {
+    padding: 60px 50px;
+  }
+  .bg-grey {
+    background-color: black;
+  }
+  .logo-small {
+    color: #95D9C3;
+    font-size: 50px;
+  }
+  .logo {
+    color: #95D9C3;
+    font-size: 200px;
+  }
+  .thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+  }
+  .thumbnail img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+  }
+  .carousel-control.right, .carousel-control.left {
+    background-image: none;
+    color: #95D9C3;
+  }
+  .carousel-indicators li {
+    border-color: #95D9C3;
+  }
+  .carousel-indicators li.active {
+    background-color: #95D9C3;
+  }
+  .item h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    font-weight: 400;
+    font-style: italic;
+    margin: 70px 0;
+  }
+  .item span {
+    font-style: normal;
+  }
+  .panel {
+    border: 1px solid #95D9C3; 
+    border-radius:0 !important;
+    transition: box-shadow 0.5s;
+  }
+  .panel:hover {
+    box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+  }
+  .panel-footer .btn:hover {
+    border: 1px solid #95D9C3;
+    background-color: #8AA39B !important;
+    color: #95D9C3;
+  }
+  .panel-heading {
+    color: #8AA39B !important;
+    background-color: #95D9C3!important;
+    padding: 25px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  .panel-footer {
+    background-color: white !important;
+  }
+  .panel-footer h3 {
+    font-size: 32px;
+  }
+  .panel-footer h4 {
+    color: #aaa;
+    font-size: 14px;
+  }
+  .panel-footer .btn {
+    margin: 15px 0;
+    background-color: #95D9C3;
+    color: #8AA39B;
+  }
+  .navbar {
+    margin-bottom: 0;
+    background-color: #95D9C3;
+    z-index: 9999;
+    border: 0;
+    font-size: 12px !important;
+    line-height: 1.42857143 !important;
+    letter-spacing: 4px;
+    border-radius: 0;
+    font-family: Montserrat, sans-serif;
+  }
+  .navbar li a, .navbar .navbar-brand {
+    color: #5C6F68 !important;
+  }
+  .navbar-nav li a:hover, .navbar-nav li.active a {
+    color: #95D9C3 !important;
+    background-color: #8AA39B !important;
+  }
+  .navbar-default .navbar-toggle {
+    border-color: transparent;
+    color: #8AA39B !important;
+  }
+  footer .glyphicon {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #95D9C3;
+  }
+  .slideanim {visibility:hidden;}
+  .slide {
+    animation-name: slide;
+    -webkit-animation-name: slide;
+    animation-duration: 1s;
+    -webkit-animation-duration: 1s;
+    visibility: visible;
+  }
+  @keyframes slide {
+    0% {
+      opacity: 0;
+      transform: translateY(70%);
+    } 
+    100% {
+      opacity: 1;
+      transform: translateY(0%);
+    }
+  }
+  @-webkit-keyframes slide {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(70%);
+    } 
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0%);
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .col-sm-4 {
+      text-align: center;
+      margin: 25px 0;
+    }
+    .btn-lg {
+      width: 100%;
+      margin-bottom: 35px;
+    }
+  }
+  @media screen and (max-width: 480px) {
+    .logo {
+      font-size: 150px;
+    }
+  }
+  </style>
+</head>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-    <center>
-      <h1>fanrco</h1>
-      <div id="holder">
-        <div id="canvas"></div>
-        <div id="links">
-          <h3>maths</h3>
-          <a href="3DPlotter/index.html">3D X-Y->Z Plotter</a>
-          <br></br>
-          <a href="3DParametric/index.html">Parametric Surface Plotter</a>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#myPage">
+      <p>Home!</p>
+      </a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#services">SERVICES</a></li>
+        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!--TOP OF PAGE-->
+<div class="jumbotron text-center">
+  <h1>Hi, I'm Franco</h1> 
+  <p>i like math and computers</p> 
+</div>
+
+<!-- Container (About Section) -->
+<div id="about" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-8">
+      <h2>Who Am I?</h2>
+      <h4>...thats a philosophical question that I am not qualified to answer.</h4>
+      <p>I'm just a college student who likes to learn and create. I spend the majority of my free time learning about math, science, robotics, and coding. When that gets boring I try to implement stuff I've learned in the form of webapps and personal projects. When that gets boring, I go right back to step 1.</p>
+      <br><button class="btn btn-default btn-lg">Get in Touch</button>
+    </div>
+    <div class="col-sm-4">
+      <br>
+      <span class="glyphicon glyphicon-user logo slideanim"></span>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-grey">
+  <div class="row">
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-book logo slideanim"></span>
+    </div>
+    <div class="col-sm-8">
+      <h2>What's important to me?</h2><br>
+      <h4><strong>EDUCATION:</strong> Helping people around me learn and understand concepts which interest them, and in return learning something new about things unfamiliar to me. </h4>
+      <h4><strong>IMPLEMENTATION:</strong> Knowledge without an outlet is wasted potential. I find coding to be the perfect outlet for sharing ideas, concepts, and experiences.  </h4>
+    </div>
+  </div>
+</div>
+
+<!-- Container (Services Section) -->
+<div id="services" class="container-fluid text-center">
+  <h2>Skills</h2>
+  <br>
+  <div class="row slideanim">
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-pushpin logo-small"></span>
+      <h4>JavaScript/HTML/CSS</h4>
+      <p>For Web Applications</p>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-gift logo-small"></span>
+      <h4>Python</h4>
+      <p>For General Shenanigans</p>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-lock logo-small"></span>
+      <h4>C++</h4>
+      <p>For Painfully Verbose Code</p>
+    </div>
+  </div>
+  <br><br>
+  <div class="row slideanim">
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-heart logo-small"></span>
+      <h4>Unity</h4>
+      <p>For Games and Applications</p>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-certificate logo-small"></span>
+      <h4>Photoshop</h4>
+      <p>For Pretty Pictures and Graphics</p>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-wrench logo-small"></span>
+      <h4>Android Dev</h4>
+      <p>Because Apple Development is $100/year</p>
+    </div>
+  </div>
+</div>
+
+<!-- Container (Portfolio Section) -->
+<div id="portfolio" class="container-fluid text-center bg-grey">
+  <h2>Recent Projects</h2><br>
+  <div class="row text-center slideanim">
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <br>
+        <h2>CLICK LINK BELOW</h2>
+        <center><a href='http://fanrco.freevar.com/3DParametric/index.html'><h4><strong>3D Parametric Equation Plotter</strong></h4></a></center>
+        <p>uses WEBGL to plot 3d surfaces</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <div id='Witness'></div>
+        <center><h4><strong>'The Witness' Puzzle Generator</strong></h4></center>
+        <p>arrow keys to move</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <br>
+        <h2>CLICK LINK BELOW</h2>
+        <center><a href='http://fanrco.freevar.com/3DPlotter/index.html'><h4><strong>X-Y-Z Function Plotter</strong></h4></a></center>
+        <p>uses WEBGL to plot f(x,y) functions</p>
+      </div>
+    </div>
+  </div><br>
+
+<!-- Container (Contact Section) -->
+<div id="contact" class="container-fluid bg-grey">
+  <h2 class="text-center">CONTACT</h2>
+  <div class="row">
+    <div class="col-sm-5">
+      <p>Contact Me (Please)</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> Coachella Valley</p>
+      <p><span class="glyphicon glyphicon-phone"></span> Franco: 760-673-6803</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> FrancoMirandaRomero@gmail.com</p>
+    </div>
+    <div class="col-sm-7 slideanim">
+      <div class="row">
+        <div class="col-sm-6 form-group">
+          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+        </div>
+        <div class="col-sm-6 form-group">
+          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
         </div>
       </div>
-    </center>
-  </body>
+      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <button class="btn btn-default pull-right" type="submit">Send</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<footer class="container-fluid text-center">
+  <a href="#myPage" title="To Top">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a>
+</footer>
+
+<script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links in navbar + footer link
+  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 900, function(){
+   
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+  
+  $(window).scroll(function() {
+    $(".slideanim").each(function(){
+      var pos = $(this).offset().top;
+
+      var winTop = $(window).scrollTop();
+        if (pos < winTop + 600) {
+          $(this).addClass("slide");
+        }
+    });
+  });
+})
+</script>
+
+</body>
 </html>
